[tool.poetry]
name = "nlp-toolbox"
version = "0.1.0"
description = "A comprehensive suite of NLP tools including sentiment analysis, translation, question answering, and summarization."
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
torch = "^2.3.1"
jupyter = "^1.0.0"
jupyterlab = "^4.2.2"
transformers = "^4.41.2"
datasets = "^2.20.0"
sentencepiece = "^0.2.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
